--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5433,20 +5433,26 @@ body.is-dark .c-kpi__icon {
 /* Controls */
 .c-media-controls {
   margin-top: var(--space-48);
-  display: grid;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   gap: var(--space-24);
-}
-
-@media (min-width: 992px) {
-  .c-media-controls {
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-  }
 }
 
 .c-media-controls__search {
   position: relative;
+  width: 48%;
 }
+
+@media (min-width: 992px) {
+  .c-media-controls {
+    align-items: center;
+  }
+
+
+}
+
+
 
 .c-media-controls__search i {
   position: absolute;
@@ -5564,10 +5570,7 @@ body.is-dark .c-chip.is-active {
   color: var(--text-primary);
 }
 
-.c-section-head p {
-  margin: 0;
-  color: var(--text-muted);
-}
+
 
 /* Media grid refined */
 .c-media-grid {
@@ -5584,12 +5587,15 @@ body.is-dark .c-chip.is-active {
   .c-media-grid .c-media-card {
     grid-column: span 6;
   }
+
 }
 
 @media (min-width: 1200px) {
   .c-media-grid .c-media-card {
     grid-column: span 4;
   }
+
+
 }
 
 
@@ -6146,7 +6152,7 @@ body.is-dark .c-chip.is-active {
 }
 
 .c-media-grid--audio>.c-media-card {
-  grid-column: span 6;
+  grid-column: span 4;
 }
 
 /* Tablet */
@@ -6462,7 +6468,8 @@ body.is-dark .c-chip.is-active {
 .c-badge {
   display: inline-flex;
   align-items: center;
-  gap: 8px;
+  gap: var(--space-4);
+
   padding: 8px 10px;
   border-radius: var(--radius-pill);
   font-size: var(--type-small);
@@ -12083,4 +12090,10 @@ html[data-theme="dark"] ::-webkit-scrollbar-thumb:active {
 .c-reels-viewport,
 .c-audio-library {
   scrollbar-width: thin;
+}
+
+@media (max-width: 767.98px) {
+  .c-media-controls__search {
+    width: 100%;
+  }
 }
